Release 1.14.0 (2025-??-??)
===========================

* Fixed an error when using json encoder with cookie based sessions
* Removed support for pylibmc
* Beaker is now tested on Python 3.8+ ... 3.13

Release 1.13.0 (2024-04-11)
===========================

* Fix validation messages for validate_key and encrypt_key
* Added support for rediscluster via ext:redisclusternm
* Removed the need to install mock library to run tests

Release 1.12.1 (2023-01-04)
===========================

* Fix ext:database backend failing to initialize.
* Improved inline code documentation for the crypto module.

Release 1.12.0 (2022-12-07)
===========================

* Enabled testing on Python 3.10 and 3.11
* Fixed issue #122 - Session ignores deserializer json
* Remove ID generation fallback for when the uuid module is not found
* Port testing from nose to pytest
* Fixed issue #180 - KeyError when loading deleted session

Release 1.11.0 (2019-08-26)
===========================

* Fixed cookie path option not being properly set (`self._path` was removed, only `self.path` exists)
* Documented `SameSite` option
* Fixed cookie expiration being localised when it shouldn't. 

Release 1.10.1 (2019-02-21)
===========================

* Fix issue with Redis namespace manager TTL
* Fix for SameSite cookie option not being set in some cases
* Fix for memcached tests on Python3

Release 1.10.0 (2018-06-04)
===========================

* Redis namespace manager now supports providing a TTL for session entries that had a ``timeout`` provided.
  This will remove the need to manually clear expired sessions from the redis storage.
* ``nsscrypto`` backend is now properly identified as providing AES support.
* When a crypto backend doesn't support AES it will no longer crash if the ``encrypt_key`` is ``None``.
* Session cookies will now provide support for ``SameSite`` through the ``samesite`` option. 
  By default this will be ``Lax``, but can be set to ``Strict`` or ``None`` to disable it.
